@@ -5,6 +5,9 @@
 	* Added printFreq flag to SusyNtAna, so event printing frequency can be controlled
 	  independently from the debug level
 	* Cleaned up getEventWeightFixed
+	* Updated default lumi to A-L in getEventWeight
+	* Added effSF to tau class, although we won't be using it yet
+	* Tagging SusyNtuple-00-00-46
 
 2013-01-29 Serhan Mete <amete@cern.ch>
 	* Update SusyNtuple/scripts/install.sh
